--- a/Front-End/style.css
+++ b/Front-End/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&family=Ruda:wght@400;700&display=swap');
 main{
     display: flex;
     justify-content: center;
@@ -9,18 +10,11 @@ main{
     background: linear-gradient(180deg, #F2B0AE 0%, rgba(184, 171, 200, 0.994558) 55.21%, rgba(147, 184, 210, 0.95) 100%);
 }
 
-.cabecalho{
-    width: 100%;
-    height: 20px;
-    background-color: white; 
-    margin-bottom: 20px;
-}
-
 .content{
     width: 95%;
     max-width: 1200px;
     height: 100%;
-    background-color: green;
+    /* background-color: green;  Usado para ajustar posicionamento*/
     margin: auto;
 }
 
@@ -36,12 +30,40 @@ main{
     background-color: white;
     display: flex;
     justify-content: space-around;
+    border-radius: 30px;
+    margin-top: 60px;
 }
 
 .esquerdo{
-    height: 80%;
+    height: 100%;
     width: 20%;
-    background-color: darkmagenta;
+    /* background-color: darkmagenta;  Usado para ajustar posicionamento*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.esquerdo img{
+    width: 130px;
+    height: 130px;
+}
+
+.direito img{
+    width: 130px;
+    height: 130px;
+}
+
+.meio{
+    height: 100%;
+    width: 50%;
+    /* background-color: darkmagenta;  Usado para ajustar posicionamento*/
+} 
+
+.direito{
+    height: 100%;
+    width: 20%;
+    /* background-color: darkmagenta;  Usado para ajustar posicionamento*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,17 +71,70 @@ main{
 }
 
 .meio{
-    height: 80%;
-    width: 50%;
-    background-color: darkmagenta;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.direito{
-    height: 80%;
-    width: 20%;
-    background-color: darkmagenta;
+.superior{
+    width: 100%;
+    height: 35%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: chartreuse;  Usado para ajustar posicionamento*/
+}
+
+.superior h1{
+    color: black;
+    font-family: 'Mouse Memoirs', sans-serif;
+    font-size: 70px;
+    margin-bottom: 20px;
+}
+
+.superior img{
+    width: 130px;
+    height: 130px;
+}
+
+.texto-centro{
+    width: 100%;
+    height: 10%;
+    /* background-color: chocolate;  Usado para ajustar posicionamento*/
+    display: flex;
+    align-items: center;
+}
+
+.texto-centro p{
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Ruda', sans-serif;
+}
+
+.caixas{
+    width: 100%;
+    height: 45%;
+    /* background-color: chartreuse;  Usado para ajustar posicionamento*/
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+}
+
+.caixas input{
+    width: 445px;
+    height: 60px;
+    font-family: 'Ruda', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 15px;
+    border-color: black;
+    border-width: 3px;
+}
+
+.caixas input:nth-child(3){
+    width: 30%;
+    font-size: 25px;
+    margin-bottom: 50px;
 }
