--- a/Front-End/Login/style.css
+++ b/Front-End/Login/style.css
@@ -5,8 +5,6 @@ main{
 }
 
 .corpo{
-    width: 1440px;
-    height: 1024px;
     background: linear-gradient(180deg, #F2B0AE 0%, rgba(184, 171, 200, 0.994558) 55.21%, rgba(147, 184, 210, 0.95) 100%);
 }
 
@@ -137,4 +135,9 @@ main{
     width: 30%;
     font-size: 25px;
     margin-bottom: 50px;
+}
+
+.rodape{
+    width: 100%;
+    height: 50px;
 }
